[package]
name = "rust_supabase_server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
dotenvy = "0.15.7"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
